Change branch in debian/gbp.conf

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,7 +1,7 @@
 [buildpackage]
 upstream-tag = v%(version)s
 upstream-tree = origin/master
-debian-branch = debian
+debian-branch = debian-stretch-bpo
 
 [dch]
 git-log = --first-parent
