--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Standards-Version: 4.1.4
 Build-Depends: debhelper-compat (= 12),
  libpcre3-dev,
 Homepage: https://github.com/zeromq/gsl
-Vcs-Git: https://github.com/bluca/gsl
+Vcs-Git: https://github.com/bluca/gsl.git
 Vcs-Browser: https://github.com/bluca/gsl
 
 Package: generator-scripting-language
